Quantum: Remove `InputAction` and add builders